@@ -205,7 +205,17 @@ RememberSyncObject(objPtr, recPtr)
     int i, j;
 
     /*
-     * Save the pointer to the allocated object so it can be finalized.
+     * Reuse any free slot in the list. 
+     */
+
+    for (i=0 ; i < recPtr->num ; ++i) {
+	if (recPtr->list[i] == NULL) {
+	    recPtr->list[i] = objPtr;
+	    return;
+	} 
+    }
+
+    /*
      * Grow the list of pointers if necessary, copying only non-NULL
      * pointers to the new list.
      */
@@ -213,7 +223,7 @@ RememberSyncObject(objPtr, recPtr)
     if (recPtr->num >= recPtr->max) {
 	recPtr->max += 8;
 	newList = (char **)ckalloc(recPtr->max * sizeof(char *));
-	for (i=0,j=0 ; i<recPtr->num ; i++) {
+	for (i=0, j=0 ; i < recPtr->num ; i++) {
             if (recPtr->list[i] != NULL) {
 		newList[j++] = recPtr->list[i];
             }
@@ -224,6 +234,7 @@ RememberSyncObject(objPtr, recPtr)
 	recPtr->list = newList;
 	recPtr->num = j;
     }
+
     recPtr->list[recPtr->num] = objPtr;
     recPtr->num++;
 }
